--- a/src/partials/projects_list.hbs
+++ b/src/partials/projects_list.hbs
@@ -1,3 +1,4 @@
+{{> partials/project_thumb data=data project=golb}}
 {{> partials/project_thumb data=data project=lechodubois}}
 {{> partials/project_thumb data=data project=gryonbiketest}}
 {{> partials/project_thumb data=data project=myportfolio}}
