--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -49,7 +49,7 @@
             <div class="content">
                 <div>
                     <h3>Frontend</h3>
-                    <p>HTML5 CSS3 Sass JavaScript ES6 jQuery Handlebars Backbone.js D3.js PWA</p>
+                    <p>HTML5 CSS3 JavaScript Sass ES6 jQuery Vue.js Gatsby Handlebars Backbone.js D3.js PWA</p>
                 </div>
                 <div>
                     <h3>Backend</h3>
