--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -243,7 +243,7 @@ body {
     .mockups {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: flex-start;
         align-items: flex-start;
         > .full-page {
             margin: 10px 3% 10px 0;
@@ -261,12 +261,18 @@ body {
             max-width: 200px;
         }
         > img.screenshot.small {
+            width: 90vw;
             max-height: 280px;
             max-width: 350px;
-            max-width: 90vw;
         }
     }
     .ul_title { font-weight: 700;}
+    ul {
+        line-height: 1.8em;
+        ul ul {
+            list-style-type: disc;
+        }
+    }
 }
 
 
@@ -298,10 +304,11 @@ body {
 .tag.webpack    {background-color: #1b74ba;}
 .tag.handlebars {background-color: #f0692b;}
 .tag.oop        {background-color: #433D79;}
-.tag.handlebabelsasspack {background-color: #7155B1;}
 .tag.sharp      {background-color: #009900;}
 .tag.gatsby     {background-color: #663399;}
 .tag.react      {background-color: #1f9bbd;}
 .tag.graphql    {background-color: #de33a6;}
+.tag.vuejs      {background-color: #3fb27f;}
+.tag.algolia    {background-color: #5468ff;}
 
 
