--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -39,8 +39,8 @@
                 <p data-t>home.whatISpeak</p>
                 <h3 data-t>home.education</h3>
                 <p data-t>home.educationContent</p>
-                <h3 data-t>home.myFavorites</h3>
-                <p data-t>home.myFavoritesContent</p>
+                <h3 data-t>home.wannabe</h3>
+                <p data-t>home.wannabeContent</p>
             </div>
         </section>
 
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <h3 data-t>home.other</h3>
-                    <p>Git WordPress Webpack OOP SEO</p>
+                    <p>Git Jamstack a11y WordPress Webpack OOP SEO</p>
                 </div>
                 <div>
                     <h3>Soft skills</h3>
