--- a/src/html/projects/myportfolio.hbs
+++ b/src/html/projects/myportfolio.hbs
@@ -28,6 +28,7 @@
 
             <h2><span class="tilted_bg"><span class="bg" data-t>projects.RoomForImprovement</span></span></h2>
             <p data-t>myportfolio.impr1</p>
+            <p data-t>myportfolio.impr2</p>
         </section>
     </div>
     <script src="/js/bundle.js"></script>
