--- a/src/partials/projects_list.hbs
+++ b/src/partials/projects_list.hbs
@@ -1,8 +1,9 @@
+{{> partials/project_thumb data=data project=cookpool}}
 {{> partials/project_thumb data=data project=golb}}
-{{> partials/project_thumb data=data project=lechodubois}}
 {{> partials/project_thumb data=data project=gryonbiketest}}
 {{> partials/project_thumb data=data project=myportfolio}}
 {{> partials/project_thumb data=data project=mooderize}}
+{{> partials/project_thumb data=data project=lechodubois}}
 {{> partials/project_thumb data=data project=theapologist}}
 {{> partials/project_thumb data=data project=swisssolarboat}}
 {{> partials/project_thumb data=data project=automaton}}
